deploy/portfolio-app/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["kakde.eu"]
      secretName: portfolio-app-tls
  rules:
    - host: kakde.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app
                port:
                  number: 80
