deploy/portfolio-app/portfolio-app-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  ingressClassName: nginx
  tls:
    - hosts: [ "kakde.eu" ]
      secretName: portfolio-kakde-eu-tls
  rules:
    - host: kakde.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app-first
                port:
                  number: 80
